--- a/website.html
+++ b/website.html
@@ -245,10 +245,10 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Cars</a>
+  <a href="website.html">Website Introduction</a>
 </li>
 <li>
-  <a href="about.html">About</a>
+  <a href="lab3.html">Lab 3</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -269,7 +269,7 @@ $(document).ready(function () {
 </div>
 
 
-
+<p>Welcome to my website!</p>
 
 
 
