--- a/lab3.html
+++ b/lab3.html
@@ -285,40 +285,38 @@ data(package = &#39;palmerpenguins&#39;)</code></pre>
 <pre class="r"><code>data_raw &lt;- palmerpenguins::penguins_raw
 print(data_raw)</code></pre>
 <pre><code>## # A tibble: 344 × 17
-##    studyName `Sample Number` Species         Region Island Stage `Individual ID`
-##    &lt;chr&gt;               &lt;dbl&gt; &lt;chr&gt;           &lt;chr&gt;  &lt;chr&gt;  &lt;chr&gt; &lt;chr&gt;          
-##  1 PAL0708                 1 Adelie Penguin… Anvers Torge… Adul… N1A1           
-##  2 PAL0708                 2 Adelie Penguin… Anvers Torge… Adul… N1A2           
-##  3 PAL0708                 3 Adelie Penguin… Anvers Torge… Adul… N2A1           
-##  4 PAL0708                 4 Adelie Penguin… Anvers Torge… Adul… N2A2           
-##  5 PAL0708                 5 Adelie Penguin… Anvers Torge… Adul… N3A1           
-##  6 PAL0708                 6 Adelie Penguin… Anvers Torge… Adul… N3A2           
-##  7 PAL0708                 7 Adelie Penguin… Anvers Torge… Adul… N4A1           
-##  8 PAL0708                 8 Adelie Penguin… Anvers Torge… Adul… N4A2           
-##  9 PAL0708                 9 Adelie Penguin… Anvers Torge… Adul… N5A1           
-## 10 PAL0708                10 Adelie Penguin… Anvers Torge… Adul… N5A2           
+##    studyName `Sample Number` Species   Region Island Stage `Individual ID` `Clutch Completion`
+##    &lt;chr&gt;               &lt;dbl&gt; &lt;chr&gt;     &lt;chr&gt;  &lt;chr&gt;  &lt;chr&gt; &lt;chr&gt;           &lt;chr&gt;              
+##  1 PAL0708                 1 Adelie P… Anvers Torge… Adul… N1A1            Yes                
+##  2 PAL0708                 2 Adelie P… Anvers Torge… Adul… N1A2            Yes                
+##  3 PAL0708                 3 Adelie P… Anvers Torge… Adul… N2A1            Yes                
+##  4 PAL0708                 4 Adelie P… Anvers Torge… Adul… N2A2            Yes                
+##  5 PAL0708                 5 Adelie P… Anvers Torge… Adul… N3A1            Yes                
+##  6 PAL0708                 6 Adelie P… Anvers Torge… Adul… N3A2            Yes                
+##  7 PAL0708                 7 Adelie P… Anvers Torge… Adul… N4A1            No                 
+##  8 PAL0708                 8 Adelie P… Anvers Torge… Adul… N4A2            No                 
+##  9 PAL0708                 9 Adelie P… Anvers Torge… Adul… N5A1            Yes                
+## 10 PAL0708                10 Adelie P… Anvers Torge… Adul… N5A2            Yes                
 ## # ℹ 334 more rows
-## # ℹ 10 more variables: `Clutch Completion` &lt;chr&gt;, `Date Egg` &lt;date&gt;,
-## #   `Culmen Length (mm)` &lt;dbl&gt;, `Culmen Depth (mm)` &lt;dbl&gt;,
-## #   `Flipper Length (mm)` &lt;dbl&gt;, `Body Mass (g)` &lt;dbl&gt;, Sex &lt;chr&gt;,
+## # ℹ 9 more variables: `Date Egg` &lt;date&gt;, `Culmen Length (mm)` &lt;dbl&gt;,
+## #   `Culmen Depth (mm)` &lt;dbl&gt;, `Flipper Length (mm)` &lt;dbl&gt;, `Body Mass (g)` &lt;dbl&gt;, Sex &lt;chr&gt;,
 ## #   `Delta 15 N (o/oo)` &lt;dbl&gt;, `Delta 13 C (o/oo)` &lt;dbl&gt;, Comments &lt;chr&gt;</code></pre>
 <pre class="r"><code>data &lt;- palmerpenguins::penguins
 print(data)</code></pre>
 <pre><code>## # A tibble: 344 × 8
-##    species island    bill_length_mm bill_depth_mm flipper_length_mm body_mass_g
-##    &lt;fct&gt;   &lt;fct&gt;              &lt;dbl&gt;         &lt;dbl&gt;             &lt;int&gt;       &lt;int&gt;
-##  1 Adelie  Torgersen           39.1          18.7               181        3750
-##  2 Adelie  Torgersen           39.5          17.4               186        3800
-##  3 Adelie  Torgersen           40.3          18                 195        3250
-##  4 Adelie  Torgersen           NA            NA                  NA          NA
-##  5 Adelie  Torgersen           36.7          19.3               193        3450
-##  6 Adelie  Torgersen           39.3          20.6               190        3650
-##  7 Adelie  Torgersen           38.9          17.8               181        3625
-##  8 Adelie  Torgersen           39.2          19.6               195        4675
-##  9 Adelie  Torgersen           34.1          18.1               193        3475
-## 10 Adelie  Torgersen           42            20.2               190        4250
-## # ℹ 334 more rows
-## # ℹ 2 more variables: sex &lt;fct&gt;, year &lt;int&gt;</code></pre>
+##    species island    bill_length_mm bill_depth_mm flipper_length_mm body_mass_g sex     year
+##    &lt;fct&gt;   &lt;fct&gt;              &lt;dbl&gt;         &lt;dbl&gt;             &lt;int&gt;       &lt;int&gt; &lt;fct&gt;  &lt;int&gt;
+##  1 Adelie  Torgersen           39.1          18.7               181        3750 male    2007
+##  2 Adelie  Torgersen           39.5          17.4               186        3800 female  2007
+##  3 Adelie  Torgersen           40.3          18                 195        3250 female  2007
+##  4 Adelie  Torgersen           NA            NA                  NA          NA &lt;NA&gt;    2007
+##  5 Adelie  Torgersen           36.7          19.3               193        3450 female  2007
+##  6 Adelie  Torgersen           39.3          20.6               190        3650 male    2007
+##  7 Adelie  Torgersen           38.9          17.8               181        3625 female  2007
+##  8 Adelie  Torgersen           39.2          19.6               195        4675 male    2007
+##  9 Adelie  Torgersen           34.1          18.1               193        3475 &lt;NA&gt;    2007
+## 10 Adelie  Torgersen           42            20.2               190        4250 &lt;NA&gt;    2007
+## # ℹ 334 more rows</code></pre>
 <p></br></p>
 </div>
 <div id="exercise" class="section level2">
